--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
           content="All Bootstrap's components in one page. Briefly presented with their own CSS selectors.">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/matstrap.css">
-    <script src="bower_components/modernizr/modernizr.js"></script>
+    <script src="js/modernizr.min.js"></script>
 </head>
 <body data-spy="scroll" data-target="#sidebar">
+
 <!--[if lt IE 10]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
@@ -57,6 +58,19 @@
 
 <div class="container">
     <div class="row">
+
+
+        <div class="container">
+            <div class="col-md-3 thumbnail card">
+                Test
+            </div>
+        </div>
+
+
+
+
+
+
         <div class="col-md-9">
             <p><strong>.container .row .col-md-9</strong></p>
 
@@ -2737,7 +2751,7 @@
 
 <!-- build:js(.) scripts/vendor.js -->
 <!-- bower:js -->
-<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="js/jquery.min.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -2760,11 +2774,11 @@
 </script>
 
 <!-- build:js(.) scripts/plugins.js -->
-<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <!-- endbuild -->
 
 <!-- build:js({app,.tmp}) scripts/main.js -->
-<script src="scripts/main.js"></script>
+<script src="js/material.js"></script>
 <!-- endbuild -->
 </body>
 </html>
