--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <!-- /builddist -->
 
 <!-- Fixed navbar -->
-<div class="navbar navbar-default navbar-static-top">
+<div class="navbar navbar-default navbar-static-top app-bar">
     <div class="container">
         <div class="navbar-header">
             <button class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse" type="button">
@@ -61,8 +61,14 @@
 
 
         <div class="container">
+            <div class="row">
             <div class="col-md-3 thumbnail card">
                 Test
+            </div>
+            </div>
+
+            <div class="row">
+                <a class="floating-action-button img-circle glyphicon glyphicon-plus" href="#"></a>
             </div>
         </div>
 
